@@ -26,6 +26,7 @@
 // WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 //
 using System;
+using System.Collections.Generic;
 using System.ComponentModel;
 using System.Globalization;
 using System.Runtime.Serialization;
@@ -69,9 +70,16 @@ namespace MonoTests.System.ServiceModel.Description
 			Assert.IsTrue (c.CanConvert (typeof (Guid)), "#15");
 			Assert.IsTrue (c.CanConvert (typeof (XmlQualifiedName)), "#16");
 			Assert.IsTrue (c.CanConvert (typeof (object)), "#17");
-			//Assert.IsFalse (c.CanConvert (typeof (QueryStringConverter)), "#18");
+			Assert.IsTrue (c.CanConvert (typeof (QueryStringConverter)), "#18");
 			// TypeConverterAttribute does not help it.
 			Assert.IsFalse (c.CanConvert (typeof (MyConvertible)), "#19");
+			Assert.IsTrue (c.CanConvert (typeof (MyPublicClass)), "#20");
+			Assert.IsTrue (c.CanConvert (typeof (MyNestedPublicClass)), "#21");
+			Assert.IsTrue (c.CanConvert (typeof (MyNestedPrivateClass)), "#22");
+			Assert.IsTrue (c.CanConvert (typeof (List<int>)), "#23");
+			Assert.IsTrue (c.CanConvert (typeof (List<MyPublicClass>)), "#24");
+			// FIXME: enable it
+			//Assert.IsFalse (c.CanConvert (typeof (List<MyInternalClass>)), "#25");
 		}
 
 		// ConvertValueToString
@@ -268,19 +276,37 @@ namespace MonoTests.System.ServiceModel.Description
 
 		// Types
 
-		[TypeConverter (typeof (MyTypeConverter))]
-		class MyConvertible
+		public class MyNestedPublicClass
 		{
 		}
 
-		class MyTypeConverter : TypeConverter
+		public class MyNestedPrivateClass
 		{
-			public override object ConvertTo (ITypeDescriptorContext context, CultureInfo culture, object value, Type destinationType)
-			{
-				if (destinationType == typeof (string))
-					return "hogehoge";
-				throw new Exception ();
-			}
+		}
+	}
+
+	// non-nested types
+
+	public class MyPublicClass
+	{
+	}
+
+	class MyInternalClass
+	{
+	}
+
+	[TypeConverter (typeof (MyTypeConverter))]
+	class MyConvertible
+	{
+	}
+
+	class MyTypeConverter : TypeConverter
+	{
+		public override object ConvertTo (ITypeDescriptorContext context, CultureInfo culture, object value, Type destinationType)
+		{
+			if (destinationType == typeof (string))
+				return "hogehoge";
+			throw new Exception ();
 		}
 	}
 }
