@@ -1,3 +1,8 @@
+2010-05-24  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* JsonQueryStringConverterTest.cs : add more tests for CanConvert()
+	  and reorganized some classes to make tests rational.
+
 2009-10-08  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* JsonQueryStringConverterTest.cs : added some string deserialization
